force-app/main/default/objects/Game_Components__c/Game_Components__c.object-meta.xml
<CustomObject>
    <label>Game Component</label>
    <nameField>
        <label>Game Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>