force-app/main/default/objects/Game_Components__c/fields/Add_On_Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Cost_2__c</fullName>
    <inlineHelpText>Specialty options cost for Q2</inlineHelpText>
    <label>Add-On Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>