force-app/main/default/objects/Game_Components__c/fields/Add_On_Markup_1__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Markup_1__c</fullName>
    <label>Add-On Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>