force-app/main/default/objects/Game_Components__c/fields/Add_On_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Price_2__c</fullName>
    <formula>Add_On_Cost_2__c + (Add_On_Cost_2__c * Add_On_Markup_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add-On Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>