force-app/main/default/objects/Game_Components__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <inlineHelpText>Additional requests or information for the game component</inlineHelpText>
    <label>Additional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>