force-app/main/default/objects/Game_Components__c/fields/Binding_Side__c.field-meta.xml
<CustomField>
    <fullName>Binding_Side__c</fullName>
    <label>Binding Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>