force-app/main/default/objects/Game_Components__c/fields/Binding_Type__c.field-meta.xml
<CustomField>
    <fullName>Binding_Type__c</fullName>
    <label>Binding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saddle Stitch</fullName>
            </value>
            <value>
                <fullName>Perfect Bound (Softcover)</fullName>
            </value>
            <value>
                <fullName>Case Bound (Hardcover</fullName>
            </value>
            <value>
                <fullName>Wire Bound</fullName>
            </value>
            <value>
                <fullName>Spiral Bound</fullName>
            </value>
            <value>
                <fullName>Board Book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>