force-app/main/default/objects/Game_Components__c/fields/Booklet_Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Booklet_Page_Count__c</fullName>
    <inlineHelpText>Number of pages including cover.</inlineHelpText>
    <label>Booklet Page Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>