force-app/main/default/objects/Game_Components__c/fields/Card_Count__c.field-meta.xml
<CustomField>
    <fullName>Card_Count__c</fullName>
    <label>Card Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>