force-app/main/default/objects/Game_Components__c/fields/Card_Foil_Stamp_Color__c.field-meta.xml
<CustomField>
    <fullName>Card_Foil_Stamp_Color__c</fullName>
    <inlineHelpText>The color for Foil Stamp</inlineHelpText>
    <label>Foil Stamp Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Hot Pink</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Rose Gold</fullName>
            </value>
            <value>
                <fullName>Teal</fullName>
            </value>
            <value>
                <fullName>Lime Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>