force-app/main/default/objects/Game_Components__c/fields/Card_Foil_Stamp_Sides__c.field-meta.xml
<CustomField>
    <fullName>Card_Foil_Stamp_Sides__c</fullName>
    <description>Foil stamping either for 1 side of the card, or both sides of the card.</description>
    <label>Card Foil Stamp Sides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-sided</fullName>
            </value>
            <value>
                <fullName>both sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>