force-app/main/default/objects/Game_Components__c/fields/Card_Length__c.field-meta.xml
<CustomField>
    <fullName>Card_Length__c</fullName>
    <inlineHelpText>Length in inches of cards that are a custom size or shape</inlineHelpText>
    <label>Card Length (Custom)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>