force-app/main/default/objects/Game_Components__c/fields/Card_Size__c.field-meta.xml
<CustomField>
    <fullName>Card_Size__c</fullName>
    <label>Card Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2.5&quot; x 3.5&quot; - Poker</fullName>
            </value>
            <value>
                <fullName>2.75&quot; x 4.75&quot; - Tarot</fullName>
            </value>
            <value>
                <fullName>2.5&quot; x 2.5&quot; - Square</fullName>
            </value>
            <value>
                <fullName>1.65&quot; x 2.5&quot; - Mini</fullName>
            </value>
            <value>
                <fullName>2.25&quot; x 3.5&quot; - Bridge</fullName>
            </value>
            <value>
                <fullName>2.35&quot; x 3.6&quot; - Euro</fullName>
            </value>
            <value>
                <fullName>3.95&quot; x 1&quot;</fullName>
            </value>
            <value>
                <fullName>2.45&quot; x 3.45&quot;</fullName>
            </value>
            <value>
                <fullName>2.25&quot; x 3.45&quot;</fullName>
            </value>
            <value>
                <fullName>2.15&quot; x 3.15&quot;</fullName>
            </value>
            <value>
                <fullName>2&quot; x 3.25&quot;</fullName>
            </value>
            <value>
                <fullName>2.4&quot; x 4.5&quot;</fullName>
            </value>
            <value>
                <fullName>2.45&quot; x 3.9&quot;</fullName>
            </value>
            <value>
                <fullName>3.85&quot; x 2.9&quot;</fullName>
            </value>
            <value>
                <fullName>2.95&quot; x 4.1&quot;</fullName>
            </value>
            <value>
                <fullName>2.8&quot; x 4.4&quot;</fullName>
            </value>
            <value>
                <fullName>5.1&quot; x 3.35&quot;</fullName>
            </value>
            <value>
                <fullName>5&quot; x 3.5&quot;</fullName>
            </value>
            <value>
                <fullName>4.75&quot; x 3.5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot; x 3.75&quot;</fullName>
            </value>
            <value>
                <fullName>4&quot; x 6&quot;</fullName>
            </value>
            <value>
                <fullName>4&quot; x 5&quot;</fullName>
            </value>
            <value>
                <fullName>4.3&quot; x 6.3&quot;</fullName>
            </value>
            <value>
                <fullName>Custom Size &amp; Shape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>