force-app/main/default/objects/Game_Components__c/fields/Card_Stock__c.field-meta.xml
<CustomField>
    <fullName>Card_Stock__c</fullName>
    <label>Card Stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Core - 280 gsm</fullName>
            </value>
            <value>
                <fullName>Coreless - 300 gsm</fullName>
            </value>
            <value>
                <fullName>Coreless Plus - 350 gsm</fullName>
            </value>
            <value>
                <fullName>Black Core (Linen) - 310 gsm</fullName>
            </value>
            <value>
                <fullName>Black Core Plus - 330 gsm</fullName>
            </value>
            <value>
                <fullName>Foil Stock - 300 gsm</fullName>
            </value>
            <value>
                <fullName>White PVC</fullName>
            </value>
            <value>
                <fullName>Black Core 11pt 240 gsm (Domestic)</fullName>
            </value>
            <value>
                <fullName>Coreless Standard 12 Pt C2S 260 gsm (Domestic)</fullName>
            </value>
            <value>
                <fullName>Coreless Linen 100 lb 270 gsm (Domestic)</fullName>
            </value>
            <value>
                <fullName>White Plastic 12 Mil 430 gsm (Domestic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>