force-app/main/default/objects/Game_Components__c/fields/Card_Width__c.field-meta.xml
<CustomField>
    <fullName>Card_Width__c</fullName>
    <inlineHelpText>Width in inches of cards that are a custom size or shape</inlineHelpText>
    <label>Card Width (Custom)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>