force-app/main/default/objects/Game_Components__c/fields/Component_Markup_1__c.field-meta.xml
<CustomField>
    <fullName>Component_Markup_1__c</fullName>
    <formula>Custom_Game_Quote__r.Product_Markup_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For custom quote only, website prices include markup.</inlineHelpText>
    <label>Component Purchase Markup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>