force-app/main/default/objects/Game_Components__c/fields/Component_Markup_2023__c.field-meta.xml
<CustomField>
    <fullName>Component_Markup_2023__c</fullName>
    <label>Component Markup 2023</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>