force-app/main/default/objects/Game_Components__c/fields/Component_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Component_Price_1__c</fullName>
    <formula>Component_Purchase_Cost_1__c + (Component_Purchase_Cost_1__c * Component_Purchase_Markup_1__c)</formula>
    <label>Component Price (Old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>