force-app/main/default/objects/Game_Components__c/fields/Component_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Component_Price_2__c</fullName>
    <formula>Component_Purchase_Cost_2__c + (Component_Purchase_Cost_2__c * Component_Purchase_Markup_2__c)</formula>
    <label>Component Price (Old)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>