force-app/main/default/objects/Game_Components__c/fields/Component_Purchase_Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Component_Purchase_Cost_2__c</fullName>
    <inlineHelpText>Purchase cost of component for Q2</inlineHelpText>
    <label>Component Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>