force-app/main/default/objects/Game_Components__c/fields/Component_Purchase_Markup_1__c.field-meta.xml
<CustomField>
    <fullName>Component_Purchase_Markup_1__c</fullName>
    <inlineHelpText>For custom quote only, website prices include markup.</inlineHelpText>
    <label>Component Purchase Markup (Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>