force-app/main/default/objects/Game_Components__c/fields/Component_Total_Price_3__c.field-meta.xml
<CustomField>
    <fullName>Component_Total_Price_3__c</fullName>
    <formula>Component_Purchase_Cost_3__c + (Component_Purchase_Cost_3__c * Component_Markup_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>