force-app/main/default/objects/Game_Components__c/fields/Corners__c.field-meta.xml
<CustomField>
    <fullName>Corners__c</fullName>
    <label>Corners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Squared</fullName>
            </value>
            <value>
                <fullName>Rounded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>