force-app/main/default/objects/Game_Components__c/fields/Cover_Paper_Finish__c.field-meta.xml
<CustomField>
    <fullName>Cover_Paper_Finish__c</fullName>
    <label>Cover Paper Finish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss Varnish</fullName>
            </value>
            <value>
                <fullName>Matte Varnish</fullName>
            </value>
            <value>
                <fullName>Gloss Lamination</fullName>
            </value>
            <value>
                <fullName>Matte Lamination</fullName>
            </value>
            <value>
                <fullName>Anti-Scratch Matte Lamination</fullName>
            </value>
            <value>
                <fullName>Soft-Touch Matte Lamination</fullName>
            </value>
            <value>
                <fullName>UV Gloss</fullName>
            </value>
            <value>
                <fullName>No Finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>