force-app/main/default/objects/Game_Components__c/fields/Cover_Paper_Weight__c.field-meta.xml
<CustomField>
    <fullName>Cover_Paper_Weight__c</fullName>
    <label>Cover Paper Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>55lb Text</fullName>
            </value>
            <value>
                <fullName>70lb Text</fullName>
            </value>
            <value>
                <fullName>85lb Text</fullName>
            </value>
            <value>
                <fullName>105lb Text</fullName>
            </value>
            <value>
                <fullName>135lb Text</fullName>
            </value>
            <value>
                <fullName>10pt Cover</fullName>
            </value>
            <value>
                <fullName>12pt Cover</fullName>
            </value>
            <value>
                <fullName>14pt Cover</fullName>
            </value>
            <value>
                <fullName>Board Book</fullName>
            </value>
            <value>
                <fullName>Faux Leather</fullName>
            </value>
            <value>
                <fullName>Fabric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>