force-app/main/default/objects/Game_Components__c/fields/Custom_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dimensions__c</fullName>
    <formula>IF(Card_Width__c=null,null,TEXT(Card_Width__c) &amp; &quot; &quot; &amp; &quot;x&quot; &amp; &quot; &quot; &amp; TEXT(Card_Length__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Dimensions</label>
    <type>Text</type>
</CustomField>