force-app/main/default/objects/Game_Components__c/fields/Custom_Game_Quote__c.field-meta.xml
<CustomField>
    <fullName>Custom_Game_Quote__c</fullName>
    <label>Custom Game Quote</label>
    <referenceTo>Custom_Game_Quote__c</referenceTo>
    <relationshipName>Game_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>