force-app/main/default/objects/Game_Components__c/fields/Deck_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Deck_Packaging__c</fullName>
    <label>Deck Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shrink Wrap</fullName>
            </value>
            <value>
                <fullName>Foil Booster Packaging</fullName>
            </value>
            <value>
                <fullName>Tuck Box</fullName>
            </value>
            <value>
                <fullName>Two-Piece Box</fullName>
            </value>
            <value>
                <fullName>Magnetic Box</fullName>
            </value>
            <value>
                <fullName>Tin Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>