force-app/main/default/objects/Game_Components__c/fields/Dust_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Dust_Jacket__c</fullName>
    <label>Dust Jacket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>