force-app/main/default/objects/Game_Components__c/fields/Endsheets__c.field-meta.xml
<CustomField>
    <fullName>Endsheets__c</fullName>
    <label>Endsheets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separated Endsheets</fullName>
            </value>
            <value>
                <fullName>No Separated Endsheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>