force-app/main/default/objects/Game_Components__c/fields/Fabric_Color__c.field-meta.xml
<CustomField>
    <fullName>Fabric_Color__c</fullName>
    <description>Color of the project&apos;s fabric cover.</description>
    <label>Fabric Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Burgundy</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Olive</fullName>
            </value>
            <value>
                <fullName>Oatmeal</fullName>
            </value>
            <value>
                <fullName>Steel Blue</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Purple</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>